--- a/MyPeronalWebSite/Views/Shared/_Layout.cshtml
+++ b/MyPeronalWebSite/Views/Shared/_Layout.cshtml
@@ -12,7 +12,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Reeni is a modern personal portfolio template for designers, developers, content writer, cleaner, programmer, fashion designer, model, Influencer and freelancers. Fully responsive, SEO-friendly, Bootstrap and easy to customize.">
     <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.svg">
-    <title>Home 03 Reeni - Personal Portfolio HTML Template | Freelancer & Developer Portfolio</title>
+    <title>@ViewBag.Title</title>
+    <meta name="description" content="@ViewBag.Description" />
+    <meta name="keywords" content="@ViewBag.Keyword" />
     <!-- Bootstrap min css -->
     <link rel="stylesheet" href="/content/css/vendor/fontawesome.css">
     <link rel="stylesheet" href="/content/css/plugins/swiper.css">
