--- a/MyPeronalWebSite/Views/Partial/NavbarPartial.cshtml
+++ b/MyPeronalWebSite/Views/Partial/NavbarPartial.cshtml
@@ -60,9 +60,9 @@
                   
                     <div class="social-link">
 
-                        <a href="@Model.Tbl_AboutMe.LinkedlnURL"><i class="fa-brands fa-linkedin-in"></i></a>
+                        <a href="https://www.linkedin.com/in/furkanaydemir13/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
 
-                        <a href="@Model.Tbl_AboutMe.GithubURL"><i class="fa-brands fa-github"></i></a>
+                        <a href="https://github.com/frknaydemirr" target="_blank"><i class="fa-brands fa-github"></i></a>
                     </div>
                 </div>
                 <!-- social area end -->
@@ -139,8 +139,8 @@
                     <div class="tmp-header-right">
                         <div class="social-share-wrapper d-none d-md-block">
                             <div class="social-link">
-                                <a href="@Model.Tbl_AboutMe?.LinkedlnURL"><i class="fa-brands fa-linkedin-in"></i></a>
-                                <a href="@Model.Tbl_AboutMe?.GithubURL"><i class="fa-brands fa-github"></i></a>
+                                <a href="@Model.Tbl_AboutMe.LinkedlnURL" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
+                                <a href="@Model.Tbl_AboutMe.GithubURL" target="_blank"><i class="fa-brands fa-github"></i></a>
                             </div>
                         </div>
 
