--- a/MyPeronalWebSite/Views/Shared/_Layout.cshtml
+++ b/MyPeronalWebSite/Views/Shared/_Layout.cshtml
@@ -16,13 +16,13 @@
     <meta name="description" content="@ViewBag.Description" />
     <meta name="keywords" content="@ViewBag.Keyword" />
     <!-- Bootstrap min css -->
-    <link rel="stylesheet" href="/content/css/vendor/fontawesome.css">
-    <link rel="stylesheet" href="/content/css/plugins/swiper.css">
-    <link rel="stylesheet" href="/content/css/plugins/odometer.css">
-    <link rel="stylesheet" href="/content/css/vendor/animate.min.css">
-    <link rel="stylesheet" href="/content/css/vendor/bootstrap.min.css">
+    <link rel="stylesheet" href="~/Content/css/vendor/fontawesome.css">
+    <link rel="stylesheet" href="~/Content/css/plugins/swiper.css">
+    <link rel="stylesheet" href="~/Content/css/plugins/odometer.css">
+    <link rel="stylesheet" href="~/Content/css/vendor/animate.min.css">
+    <link rel="stylesheet" href="~/Content/css/vendor/bootstrap.min.css">
     <!-- custom css -->
-    <link rel="stylesheet" href="/content/css/style.css">
+    <link rel="stylesheet" href="~/Content/css/style.css">
     <!-- jQuery CDN (Google) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
@@ -35,31 +35,31 @@
     @RenderBody()
 
 
-    <script src="/content/js/vendor/jquery.js"></script>
-    <script src="/content/js/vendor/jquery-ui.min.js"></script>
-    <script src="/content/js/vendor/waypoints.min.js"></script>
+    <script src="~/Content/js/vendor/jquery.js"></script>
+    <script src="~/Content/js/vendor/jquery-ui.min.js"></script>
+    <script src="~/Content/js/vendor/waypoints.min.js"></script>
 
-    <script src="/content/js/plugins/odometer.js"></script>
-    <script src="/content/js/vendor/appear.js"></script>
+    <script src="~/Content/js/plugins/odometer.js"></script>
+    <script src="~/Content/js/vendor/appear.js"></script>
 
 
-    <script src="/content/js/vendor/jquery-one-page-nav.js"></script>
-    <script src="/content/js/plugins/swiper.js"></script>
+    <script src="~/Content/js/vendor/jquery-one-page-nav.js"></script>
+    <script src="~/Content/js/plugins/swiper.js"></script>
 
-    <script src="/content/js/plugins/gsap.js"></script>
-    <script src="/content/js/plugins/splittext.js"></script>
-    <script src="/content/js/plugins/scrolltigger.js"></script>
-    <script src="/content/js/plugins/scrolltoplugins.js"></script>
-    <script src="/content/js/plugins/smoothscroll.js"></script>
+    <script src="~/Content/js/plugins/gsap.js"></script>
+    <script src="~/Content/js/plugins/splittext.js"></script>
+    <script src="~/Content/js/plugins/scrolltigger.js"></script>
+    <script src="~/Content/js/plugins/scrolltoplugins.js"></script>
+    <script src="~/Content/js/plugins/smoothscroll.js"></script>
     <!-- bootstrap Js-->
-    <script src="/content/js/vendor/bootstrap.min.js"></script>
-    <script src="/content/js/vendor/waw.js"></script>
-    <script src="/content/js/plugins/isotop.js"></script>
-    <script src="/content/js/plugins/animation.js"></script>
-    <script src="/content/js/plugins/contact.form.js"></script>
-    <script src="/content/js/vendor/backtop.js"></script>
-    <script src="/content/js/plugins/text-type.js"></script>
+    <script src="~/Content/js/vendor/bootstrap.min.js"></script>
+    <script src="~/Content/js/vendor/waw.js"></script>
+    <script src="~/Content/js/plugins/isotop.js"></script>
+    <script src="~/Content/js/plugins/animation.js"></script>
+    <script src="~/Content/js/plugins/contact.form.js"></script>
+    <script src="~/Content/js/vendor/backtop.js"></script>
+    <script src="~/Content/js/plugins/text-type.js"></script>
     <!-- custom Js -->
-    <script src="/content/js/main.js"></script>
+    <script src="~/Content/js/main.js"></script>
 </body>
 </html>
